organizing the content of section about functions

--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPbZRuvJE3IAO1NasF4kPiH",
+      "authorship_tag": "ABX9TyOI1aLgVNPdZsGbTeYPodxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3616,11 +3616,11 @@
         "print(l)"
       ],
       "metadata": {
-        "id": "C4uFZkpOH5eP",
-        "outputId": "57f15c2d-59d3-4cfd-c23c-b28fd7b17f10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C4uFZkpOH5eP",
+        "outputId": "57f15c2d-59d3-4cfd-c23c-b28fd7b17f10"
       },
       "execution_count": 1,
       "outputs": [
@@ -3641,11 +3641,11 @@
         "sorted({2, 1, 4, 3})"
       ],
       "metadata": {
-        "id": "LJBOVYEAICHe",
-        "outputId": "82eaf31b-e9ff-4214-945b-3ffe81297e90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LJBOVYEAICHe",
+        "outputId": "82eaf31b-e9ff-4214-945b-3ffe81297e90"
       },
       "execution_count": 2,
       "outputs": [
@@ -3669,11 +3669,11 @@
         "{1,2}.union({3:\"buh\", 4:\"buha\"})"
       ],
       "metadata": {
-        "id": "3vWSs59MIG1C",
-        "outputId": "ee1c483d-5c67-489d-8b5a-0e52911ba2ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3vWSs59MIG1C",
+        "outputId": "ee1c483d-5c67-489d-8b5a-0e52911ba2ea"
       },
       "execution_count": 3,
       "outputs": [
@@ -3719,11 +3719,11 @@
         "prices_increased  "
       ],
       "metadata": {
-        "id": "WlTv_oIPINm5",
-        "outputId": "d84cbe19-6a8f-4485-d45c-73fabd368287",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WlTv_oIPINm5",
+        "outputId": "d84cbe19-6a8f-4485-d45c-73fabd368287"
       },
       "execution_count": 5,
       "outputs": [
@@ -3745,11 +3745,11 @@
         "[price * 1.20  for price in prices]\n"
       ],
       "metadata": {
-        "id": "wFUZYCQfIaVg",
-        "outputId": "3e7959a2-5978-4899-fb9e-55ba8cab7b18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wFUZYCQfIaVg",
+        "outputId": "3e7959a2-5978-4899-fb9e-55ba8cab7b18"
       },
       "execution_count": 6,
       "outputs": [
@@ -3784,11 +3784,11 @@
         "fruits_prices_dict"
       ],
       "metadata": {
-        "id": "0IJzX4MzIlWL",
-        "outputId": "fcab93e7-ff14-469f-cbc1-54c162aaaab6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0IJzX4MzIlWL",
+        "outputId": "fcab93e7-ff14-469f-cbc1-54c162aaaab6"
       },
       "execution_count": 7,
       "outputs": [
@@ -3810,11 +3810,11 @@
         "{value: key for key, value in fruits_prices_dict.items()}"
       ],
       "metadata": {
-        "id": "9wKk6UQYIoyg",
-        "outputId": "2e94dbe3-12c8-45fe-e57d-816b61cccb52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9wKk6UQYIoyg",
+        "outputId": "2e94dbe3-12c8-45fe-e57d-816b61cccb52"
       },
       "execution_count": 10,
       "outputs": [
@@ -3852,11 +3852,11 @@
         "bag_of_words"
       ],
       "metadata": {
-        "id": "Nx1JyZ_3IoBj",
-        "outputId": "908c80ce-22a7-41b0-c7b5-f49b804e87d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nx1JyZ_3IoBj",
+        "outputId": "908c80ce-22a7-41b0-c7b5-f49b804e87d2"
       },
       "execution_count": 12,
       "outputs": [
@@ -3913,75 +3913,6 @@
         },
         "id": "UR2pzXvS9AGI",
         "outputId": "6e6d5770-6c9f-4089-9e84-58550d1186b6"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Witaj człowieku o imieniu Robert i nazwisku Trypuz!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print_welcome_message('Adam', 'Zawada')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hvi4MLX59C5t",
-        "outputId": "c38ca6a4-2652-43b6-8e8e-f90561e2b773"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Witaj człowieku o imieniu Adam i nazwisku Zawada!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print_welcome_message('Zawada', 'Adam')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EoilqkrS9E--",
-        "outputId": "51e36d7f-bce1-4105-a9ec-afcda58e5e49"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Witaj człowieku o imieniu Zawada i nazwisku Adam!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print_welcome_message(surname='Trypuz', name='Robert')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SKQarOwT9Grj",
-        "outputId": "e9f64f2a-4352-4218-923e-af97b54249d5"
       },
       "execution_count": null,
       "outputs": [
@@ -4120,6 +4051,93 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Argumenty pozycyjne"
+      ],
+      "metadata": {
+        "id": "YJTQxKRsgfOk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_welcome_message('Adam', 'Zawada')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hvi4MLX59C5t",
+        "outputId": "c38ca6a4-2652-43b6-8e8e-f90561e2b773"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Witaj człowieku o imieniu Adam i nazwisku Zawada!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_welcome_message('Zawada', 'Adam')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EoilqkrS9E--",
+        "outputId": "51e36d7f-bce1-4105-a9ec-afcda58e5e49"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Witaj człowieku o imieniu Zawada i nazwisku Adam!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_welcome_message(surname='Trypuz', name='Robert')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SKQarOwT9Grj",
+        "outputId": "e9f64f2a-4352-4218-923e-af97b54249d5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Witaj człowieku o imieniu Robert i nazwisku Trypuz!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Wartości domyślne"
+      ],
+      "metadata": {
+        "id": "_BBXI03HgvaH"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CIv0YY5rs9WF"
@@ -4248,6 +4266,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Wartości opcjonalne"
+      ],
+      "metadata": {
+        "id": "-PJ89THdg1wr"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zoaacpHZL1yY"
@@ -4314,6 +4341,119 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Wartość zwrotna"
+      ],
+      "metadata": {
+        "id": "p2VZLm6yhJ4I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(a, b):\n",
+        "  result = a + b\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "4QVCL3MD90aR"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add(2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qSlSD41592ql",
+        "outputId": "3d5c44fc-e767-475a-fb32-3877dead0924"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add(2,3) * add(3,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xM0eaz3H947H",
+        "outputId": "d410b26f-e57e-45a1-cec0-fca82ba758dd"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "35"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add('Robert', 'Trypuz')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "jdO_CyKn996i",
+        "outputId": "409bd390-e04d-4109-bf84-898b495b6141"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'RobertTrypuz'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Funkcje i struktury danych"
+      ],
+      "metadata": {
+        "id": "Tn5vK6IWg7tL"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "mMnbauXRe2ZI",
@@ -4330,141 +4470,6 @@
         "\n",
         "print_awart_winners(['Jan z Warszawy', 'Maria z Grudziądza', 'Janina z Sokółki'])"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Oto nasi zwycięzcy:\n",
-            "- Jan z Warszawy\n",
-            "- Maria z Grudziądza\n",
-            "- Janina z Sokółki\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def add(a, b):\n",
-        "  result = a + b\n",
-        "  return result"
-      ],
-      "metadata": {
-        "id": "4QVCL3MD90aR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "add(2,3)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qSlSD41592ql",
-        "outputId": "619be4c2-05c6-4ece-938a-beefce66e06b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 81
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "add(2,3) * add(3,4)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xM0eaz3H947H",
-        "outputId": "dbafce83-2798-48eb-c5ad-4e274fdb4703"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "35"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 82
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "add('Robert', 'Trypuz')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "jdO_CyKn996i",
-        "outputId": "1d8123cf-df96-4147-94dd-d560768f2499"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'RobertTrypuz'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 83
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def print_award_winners(list_of_winners):\n",
-        "  print('Oto nasi zwycięzcy:')\n",
-        "  for winner in list_of_winners:\n",
-        "    print(f'- {winner}')"
-      ],
-      "metadata": {
-        "id": "6fY3Q21L-Ejf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print_award_winners(['Jan z Warszawy', 'Maria z Grudziądza', 'Janina z Sokółki'])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jOAe0FQb-GX6",
-        "outputId": "466b483d-3b78-403f-b56b-350bc8711593"
-      },
       "execution_count": null,
       "outputs": [
         {
@@ -4549,6 +4554,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Przekazywanie dowolnej liczby argumentów"
+      ],
+      "metadata": {
+        "id": "TqVqjcW1hgCP"
+      }
     },
     {
       "cell_type": "code",
