--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOI1aLgVNPdZsGbTeYPodxx",
+      "authorship_tag": "ABX9TyNeHNrUebwMoqpfdFZrfveA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3517,13 +3517,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f80ecc2-66c8-414c-85f7-af6b8ea0c716"
+        "outputId": "19f4b1a7-b81c-4aa8-da9f-fb128576b5ee"
       },
       "source": [
         "jan_kaszanka = ('Jan', 'Kaszanka', 180, 113, 54, 150)\n",
         "jan_kaszanka"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3533,7 +3533,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 3
         }
       ]
     },
@@ -3586,6 +3586,35 @@
           },
           "metadata": {},
           "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in jan_kaszanka:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "qIGNmIDliCD0",
+        "outputId": "0f92b067-8a3a-4fd1-b8f7-3189a57a027d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jan\n",
+            "Kaszanka\n",
+            "180\n",
+            "113\n",
+            "54\n",
+            "150\n"
+          ]
         }
       ]
     },
@@ -4571,7 +4600,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a68116e3-5a04-4aa5-d843-a2d15303034b"
+        "outputId": "a5d5cb3d-d26a-41a3-80b7-a6f8c5782b4d"
       },
       "source": [
         "def add_foreign_languages(*languages):\n",
@@ -4586,7 +4615,7 @@
         "\n",
         "add_foreign_languages('angielski')"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -4599,12 +4628,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "add_foreign_languages('angielski', 'hiszpański')"
+      ],
+      "metadata": {
+        "id": "t7jEOWaeiN2p",
+        "outputId": "afd43c55-ae16-4587-8f85-65a543a8720a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kandydat zna języki obce:\n",
+            "- angielski\n",
+            "- hiszpański\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "BfJsrTPZ5Oe1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "750e5a43-f081-4a55-c21b-81ecc2b46c87"
+        "outputId": "5ae61423-baad-4f98-a1f6-3219b2da5447"
       },
       "source": [
         "def add_foreign_languages(**languages):\n",
@@ -4619,7 +4673,7 @@
         "\n",
         "add_foreign_languages(angielski='biegle', włoski='początkująco')"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -4657,27 +4711,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edc58d7e-0812-4bdb-b23f-f92e3e8e716a"
+        "outputId": "d28d6689-b9d0-41c4-c8f0-b0b7380a7a7a"
       },
       "source": [
-        "with open('lista_zakupów.txt', 'w') as file:\n",
+        "with open('lista_zakupów.txt', mode='w') as file:\n",
         "  file.write('Lista zakupów:\\n')\n",
         "  while True:\n",
-        "    product = input('Dodaj produkt (0 aby zakończyć): ')\n",
-        "    if product == '0':\n",
-        "      break\n",
+        "    product = input('Dodaj produkt: ')\n",
+        "    if product:\n",
+        "      file.write(f'- {product}\\n')\n",
         "    else:\n",
-        "      file.write(f'- {product}\\n')"
+        "      break\n",
+        "      "
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dodaj produkt (0 aby zakończyć): jaja\n",
-            "Dodaj produkt (0 aby zakończyć): mleko\n",
-            "Dodaj produkt (0 aby zakończyć): 0\n"
+            "Dodaj produkt: mleko\n",
+            "Dodaj produkt: masło\n",
+            "Dodaj produkt: \n"
           ]
         }
       ]
@@ -5294,6 +5349,132 @@
           },
           "metadata": {},
           "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Obiekty iterowalne i generatory"
+      ],
+      "metadata": {
+        "id": "WyMl0Hzfgs81"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for letter in 'Ala ma kota':\n",
+        "  print(letter)"
+      ],
+      "metadata": {
+        "id": "bpBlBKbOgwYR",
+        "outputId": "e440ea01-100e-4ab5-a1ed-0b6024c94688",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "l\n",
+            "a\n",
+            " \n",
+            "m\n",
+            "a\n",
+            " \n",
+            "k\n",
+            "o\n",
+            "t\n",
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for number in 234:\n",
+        "  print(number)"
+      ],
+      "metadata": {
+        "id": "Xw58q4Y3g6EZ",
+        "outputId": "8eb9f810-7cf8-4f55-e5d2-8617cbeddf68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 186
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-8eef2e3593cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;36m234\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MyIterator():\n",
+        "  def __init__(self, data):\n",
+        "    print('\\tKonstruktor __init__ przyjmuje dane.')\n",
+        "    self.data = data\n",
+        "    self.index = 0\n",
+        "  \n",
+        "  def __iter__(self):\n",
+        "    print('\\tMetoda __iter__ informuje Pythona, że obiekt jest iterowalny.')\n",
+        "    return self\n",
+        "  \n",
+        "  def __next__(self):\n",
+        "    # print('Metoda __next__')\n",
+        "    data_len = len(self.data)\n",
+        "    if self.index >= len(self.data):\n",
+        "      print(f'\\tMetoda __next__: StopIteration')\n",
+        "      raise StopIteration\n",
+        "    \n",
+        "    value = self.data[self.index]\n",
+        "    self.index += 1\n",
+        "    print(f'\\tMetoda __next__: przechwytuję wartość \"{value}\"; indeks {self.index}/{data_len}.')\n",
+        "    return value\n",
+        "\n",
+        "for item in MyIterator('abc'):\n",
+        "    print(item)"
+      ],
+      "metadata": {
+        "id": "4NO6C9iSh9nc",
+        "outputId": "aa61d0c1-d04b-4558-dfb1-429d66181ae4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tKonstruktor __init__ przyjmuje dane.\n",
+            "\tMetoda __iter__ informuje Pythona, że obiekt jest iterowalny.\n",
+            "\tMetoda __next__: przechwytuję wartość \"a\"; indeks 1/3.\n",
+            "a\n",
+            "\tMetoda __next__: przechwytuję wartość \"b\"; indeks 2/3.\n",
+            "b\n",
+            "\tMetoda __next__: przechwytuję wartość \"c\"; indeks 3/3.\n",
+            "c\n",
+            "\tMetoda __next__: StopIteration\n"
+          ]
         }
       ]
     }
