--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNeHNrUebwMoqpfdFZrfveA",
+      "authorship_tag": "ABX9TyOuRGNeob9mBcOGCwch2YI7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3596,11 +3596,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "qIGNmIDliCD0",
-        "outputId": "0f92b067-8a3a-4fd1-b8f7-3189a57a027d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qIGNmIDliCD0",
+        "outputId": "0f92b067-8a3a-4fd1-b8f7-3189a57a027d"
       },
       "execution_count": 4,
       "outputs": [
@@ -4632,11 +4632,11 @@
         "add_foreign_languages('angielski', 'hiszpański')"
       ],
       "metadata": {
-        "id": "t7jEOWaeiN2p",
-        "outputId": "afd43c55-ae16-4587-8f85-65a543a8720a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t7jEOWaeiN2p",
+        "outputId": "afd43c55-ae16-4587-8f85-65a543a8720a"
       },
       "execution_count": 29,
       "outputs": [
@@ -5368,11 +5368,11 @@
         "  print(letter)"
       ],
       "metadata": {
-        "id": "bpBlBKbOgwYR",
-        "outputId": "e440ea01-100e-4ab5-a1ed-0b6024c94688",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bpBlBKbOgwYR",
+        "outputId": "e440ea01-100e-4ab5-a1ed-0b6024c94688"
       },
       "execution_count": 1,
       "outputs": [
@@ -5402,12 +5402,12 @@
         "  print(number)"
       ],
       "metadata": {
-        "id": "Xw58q4Y3g6EZ",
-        "outputId": "8eb9f810-7cf8-4f55-e5d2-8617cbeddf68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
-        }
+        },
+        "id": "Xw58q4Y3g6EZ",
+        "outputId": "8eb9f810-7cf8-4f55-e5d2-8617cbeddf68"
       },
       "execution_count": 2,
       "outputs": [
@@ -5429,7 +5429,7 @@
       "source": [
         "class MyIterator():\n",
         "  def __init__(self, data):\n",
-        "    print('\\tKonstruktor __init__ przyjmuje dane.')\n",
+        "    print('\\tKonstruktor __init__ przyjmuje dane i inicjuje indeks.')\n",
         "    self.data = data\n",
         "    self.index = 0\n",
         "  \n",
@@ -5446,18 +5446,18 @@
         "    \n",
         "    value = self.data[self.index]\n",
         "    self.index += 1\n",
-        "    print(f'\\tMetoda __next__: przechwytuję wartość \"{value}\"; indeks {self.index}/{data_len}.')\n",
+        "    print(f'\\tMetoda __next__: przechwytuję wartość \"{value}\" i przechodzę do indeksu {self.index}/{data_len}.')\n",
         "    return value\n",
         "\n",
         "for item in MyIterator('abc'):\n",
         "    print(item)"
       ],
       "metadata": {
-        "id": "4NO6C9iSh9nc",
-        "outputId": "aa61d0c1-d04b-4558-dfb1-429d66181ae4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4NO6C9iSh9nc",
+        "outputId": "aa61d0c1-d04b-4558-dfb1-429d66181ae4"
       },
       "execution_count": 10,
       "outputs": [
