--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuRGNeob9mBcOGCwch2YI7",
+      "authorship_tag": "ABX9TyN8yS+faYZ+pKQiz09Lz0IJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2507,7 +2507,7 @@
         "outputId": "4f777adb-5121-4ca0-fa30-36511de7ada2"
       },
       "source": [
-        "sorted_rainbow = rainbow.copy()\n",
+        "sorted_rainbow = rainbow.copy() # sorted_rainbow = rainbow[:]\n",
         "sorted_rainbow.sort()\n",
         "print(sorted_rainbow)"
       ],
@@ -2652,13 +2652,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86436842-c15b-45c1-8d64-fb242e599e39"
+        "outputId": "620ac9c2-c045-4999-aa67-d1f99e5eb49d"
       },
       "source": [
         "rainbow = ['czerwony', 'pomarańczowy', 'żółty', 'zielony', 'niebieski', 'indygo']\n",
         "rainbow[:3]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2668,7 +2668,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 3
         }
       ]
     },
@@ -5440,13 +5440,13 @@
         "  def __next__(self):\n",
         "    # print('Metoda __next__')\n",
         "    data_len = len(self.data)\n",
-        "    if self.index >= len(self.data):\n",
+        "    if self.index >= data_len:\n",
         "      print(f'\\tMetoda __next__: StopIteration')\n",
         "      raise StopIteration\n",
         "    \n",
         "    value = self.data[self.index]\n",
         "    self.index += 1\n",
-        "    print(f'\\tMetoda __next__: przechwytuję wartość \"{value}\" i przechodzę do indeksu {self.index}/{data_len}.')\n",
+        "    print(f'\\tMetoda __next__: przechwytuję aktualną wartość \"{value}\" z indeksu {self.index-1}/{data_len-1} i przechodzę do indeksu {self.index}.')\n",
         "    return value\n",
         "\n",
         "for item in MyIterator('abc'):\n",
@@ -5457,24 +5457,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4NO6C9iSh9nc",
-        "outputId": "aa61d0c1-d04b-4558-dfb1-429d66181ae4"
+        "outputId": "d3942ea1-fdd6-4f23-c5d6-576bc5f462d7"
       },
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\tKonstruktor __init__ przyjmuje dane.\n",
+            "\tKonstruktor __init__ przyjmuje dane i inicjuje indeks.\n",
             "\tMetoda __iter__ informuje Pythona, że obiekt jest iterowalny.\n",
-            "\tMetoda __next__: przechwytuję wartość \"a\"; indeks 1/3.\n",
+            "\tMetoda __next__: przechwytuję aktualną wartość \"a\" z indeksu 0/2 i przechodzę do indeksu 1.\n",
             "a\n",
-            "\tMetoda __next__: przechwytuję wartość \"b\"; indeks 2/3.\n",
+            "\tMetoda __next__: przechwytuję aktualną wartość \"b\" z indeksu 1/2 i przechodzę do indeksu 2.\n",
             "b\n",
-            "\tMetoda __next__: przechwytuję wartość \"c\"; indeks 3/3.\n",
+            "\tMetoda __next__: przechwytuję aktualną wartość \"c\" z indeksu 2/2 i przechodzę do indeksu 3.\n",
             "c\n",
             "\tMetoda __next__: StopIteration\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rev_str(my_str):\n",
+        "    length = len(my_str)\n",
+        "    for i in range(length - 1, -1, -1):\n",
+        "        yield my_str[i]\n",
+        "\n",
+        "a = rev_str(\"hello\")\n",
+        "next(a)\n",
+        "next(a)"
+      ],
+      "metadata": {
+        "id": "B51dNKdJOEol",
+        "outputId": "36939f93-d94b-4d5b-d11f-40e2d53e72fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'l'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
