--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN8yS+faYZ+pKQiz09Lz0IJ",
+      "authorship_tag": "ABX9TyNvq0FlVTPTD3LQIpxffjUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5491,12 +5491,12 @@
         "next(a)"
       ],
       "metadata": {
-        "id": "B51dNKdJOEol",
-        "outputId": "36939f93-d94b-4d5b-d11f-40e2d53e72fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "B51dNKdJOEol",
+        "outputId": "36939f93-d94b-4d5b-d11f-40e2d53e72fc"
       },
       "execution_count": 2,
       "outputs": [
@@ -5512,6 +5512,96 @@
           },
           "metadata": {},
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Chatbot"
+      ],
+      "metadata": {
+        "id": "6M-nRqn47_VD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import csv\n",
+        "\n",
+        "with open('dialogs.csv', 'w') as file:\n",
+        "  csv_writer = csv.writer(file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+        "\n",
+        "  csv_writer.writerow(['hello', 'hello'])\n",
+        "  csv_writer.writerow(['how are you', 'so so'])\n",
+        "\n",
+        "\n",
+        "class Chatbot():\n",
+        "  def __init__(self, csv_dialogs_file):\n",
+        "    self.csv_dialogs_file = csv_dialogs_file\n",
+        "\n",
+        "  def create_dialog_tuples(self):\n",
+        "    pairs = []\n",
+        "    with open(self.csv_dialogs_file, newline='') as file:\n",
+        "      csv_reader = csv.reader(file, delimiter=',', quotechar='\"')\n",
+        "      for row in csv_reader:\n",
+        "        pairs.append((row[0], row[1]))\n",
+        "    return pairs\n",
+        "\n",
+        "  def find_matching(self, user_phrase, pairs):\n",
+        "    answer = 'buh!'\n",
+        "    intersection_len_prev = 0\n",
+        "    for index, pair in enumerate(pairs):\n",
+        "      user_speaks = set(word_tokenize(user_phrase.lower()))\n",
+        "      matching = set(word_tokenize(pair[0]))\n",
+        "      intersection_len = len(set.intersection(user_speaks, matching))\n",
+        "      if intersection_len > intersection_len_prev:\n",
+        "        answer = pairs[index][1]\n",
+        "    return answer, \n",
+        "\n",
+        "  def run(self):\n",
+        "    pairs = self.create_dialog_tuples()\n",
+        "    user_phrase = input(\"you: \")\n",
+        "    while True:\n",
+        "      if not user_phrase:\n",
+        "        break\n",
+        "      else:\n",
+        "        answer = self.find_matching(user_phrase, pairs)\n",
+        "        print(colored('chatbot:', attrs=['bold']), answer)\n",
+        "      user_phrase = input(\"you: \")\n",
+        "\n",
+        "chatbot = Chatbot('dialogs.csv')\n",
+        "chatbot.run()        "
+      ],
+      "metadata": {
+        "id": "g9aRa6wp773K",
+        "outputId": "8b01a318-4f6e-4733-9832-e7c732b005b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 371
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "you: hi\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mchatbot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChatbot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dialogs.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mchatbot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_matching\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_phrase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpairs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolored\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'chatbot:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'bold'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manswer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m       \u001b[0muser_phrase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36mfind_matching\u001b[0;34m(self, user_phrase, pairs)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mintersection_len_prev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpairs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m       \u001b[0muser_speaks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_phrase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m       \u001b[0mmatching\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m       \u001b[0mintersection_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_speaks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatching\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'word_tokenize' is not defined"
+          ]
         }
       ]
     }
