--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvq0FlVTPTD3LQIpxffjUt",
+      "authorship_tag": "ABX9TyOHpdOWIFApEOtaDc0lgJHu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5527,18 +5527,85 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install pystempel"
+      ],
+      "metadata": {
+        "id": "gEcPNAjpeaoj",
+        "outputId": "60ae335d-ddee-4e6e-dc8d-9ffcddda1b4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pystempel\n",
+            "  Downloading pystempel-1.2.0-py3-none-any.whl (2.7 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.7 MB 5.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from pystempel) (4.63.0)\n",
+            "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.7/dist-packages (from pystempel) (2.4.0)\n",
+            "Installing collected packages: pystempel\n",
+            "Successfully installed pystempel-1.2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import csv\n",
+        "from stempel import StempelStemmer\n",
+        "from termcolor import colored\n",
         "\n",
+        "stemmer = StempelStemmer.polimorf()"
+      ],
+      "metadata": {
+        "id": "DhBBt-kjeUB5",
+        "outputId": "7861c923-e483-4623-8475-030822bd704b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading: 100%|██████████| 11368252/11368252 [00:14<00:00, 792360.95bytes/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "with open('dialogs.csv', 'w') as file:\n",
         "  csv_writer = csv.writer(file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
         "\n",
-        "  csv_writer.writerow(['hello', 'hello'])\n",
-        "  csv_writer.writerow(['how are you', 'so so'])\n",
-        "\n",
-        "\n",
+        "  csv_writer.writerow(['cześć', 'Cześć'])\n",
+        "  csv_writer.writerow(['co u ciebie słychać', 'Dobrze, dziękuję.'])\n",
+        "  csv_writer.writerow(['czy czekają nas dobre dni', 'Nie widzę inaczej!'])\n",
+        "  # ...\n",
+        "  csv_writer.writerow(['pa', 'Pa pa!'])"
+      ],
+      "metadata": {
+        "id": "pvA4OSPW1WKL"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class Chatbot():\n",
+        "\n",
         "  def __init__(self, csv_dialogs_file):\n",
         "    self.csv_dialogs_file = csv_dialogs_file\n",
+        "    \n",
         "\n",
         "  def create_dialog_tuples(self):\n",
         "    pairs = []\n",
@@ -5548,59 +5615,65 @@
         "        pairs.append((row[0], row[1]))\n",
         "    return pairs\n",
         "\n",
+        "  def split_and_clean(self, sentence):\n",
+        "    punkt = ',.?!\\'\";@#$%&*+-_`<>{}()'\n",
+        "    sentence_tokenized = [word.lower() for word in sentence.split()]\n",
+        "    sentence_tokenized_clean = []\n",
+        "    for word in sentence_tokenized:\n",
+        "      if word[0] in punkt:\n",
+        "        word = word[1:]\n",
+        "      if word[-1] in punkt:\n",
+        "        word = word[:-1]\n",
+        "      sentence_tokenized_clean.append(stemmer.stem(word))\n",
+        "    return sentence_tokenized_clean\n",
+        "\n",
         "  def find_matching(self, user_phrase, pairs):\n",
-        "    answer = 'buh!'\n",
+        "    answer = 'Nie wiem.'\n",
         "    intersection_len_prev = 0\n",
         "    for index, pair in enumerate(pairs):\n",
-        "      user_speaks = set(word_tokenize(user_phrase.lower()))\n",
-        "      matching = set(word_tokenize(pair[0]))\n",
+        "      user_speaks = set(self.split_and_clean(user_phrase.lower()))\n",
+        "      matching = set(self.split_and_clean(pair[0]))\n",
         "      intersection_len = len(set.intersection(user_speaks, matching))\n",
         "      if intersection_len > intersection_len_prev:\n",
         "        answer = pairs[index][1]\n",
-        "    return answer, \n",
+        "        print(f'\\tuser speaks: {user_speaks}')\n",
+        "        print(f'\\tmatching: {matching}')\n",
+        "    return answer\n",
         "\n",
         "  def run(self):\n",
         "    pairs = self.create_dialog_tuples()\n",
-        "    user_phrase = input(\"you: \")\n",
+        "    user_phrase = input(\"ty: \")\n",
         "    while True:\n",
         "      if not user_phrase:\n",
+        "        print('END')\n",
         "        break\n",
         "      else:\n",
         "        answer = self.find_matching(user_phrase, pairs)\n",
         "        print(colored('chatbot:', attrs=['bold']), answer)\n",
-        "      user_phrase = input(\"you: \")\n",
+        "      user_phrase = input(\"ty: \")\n",
         "\n",
         "chatbot = Chatbot('dialogs.csv')\n",
         "chatbot.run()        "
       ],
       "metadata": {
-        "id": "g9aRa6wp773K",
-        "outputId": "8b01a318-4f6e-4733-9832-e7c732b005b5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 371
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g9aRa6wp773K",
+        "outputId": "acde2f38-f877-4c56-e274-742a889b17ef"
       },
-      "execution_count": 1,
+      "execution_count": 25,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "you: hi\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mchatbot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChatbot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dialogs.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mchatbot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_matching\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_phrase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpairs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolored\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'chatbot:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'bold'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manswer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m       \u001b[0muser_phrase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-1-aaf871998783>\u001b[0m in \u001b[0;36mfind_matching\u001b[0;34m(self, user_phrase, pairs)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mintersection_len_prev\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpair\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpairs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m       \u001b[0muser_speaks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_phrase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m       \u001b[0mmatching\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpair\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m       \u001b[0mintersection_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_speaks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatching\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'word_tokenize' is not defined"
+            "you: cześć\n",
+            "\tuser speaks: {'cześć'}\n",
+            "\tmatching: {'cześć'}\n",
+            "\u001b[1mchatbot:\u001b[0m Cześć\n",
+            "you: \n",
+            "END\n"
           ]
         }
       ]
